--- a/content/javascript/learn-markdown/detail/1.md
+++ b/content/javascript/learn-markdown/detail/1.md
@@ -1,3 +1,6 @@
 +++
 title = "1"
+description = "アロー関数(arrow function)はJavaScriptの関数を作る方法のひとつです。"
+date = 1970-01-01
+tags = ["Python", "Markdown"]
 +++
