--- a/content/javascript/learn-markdown/detail/1.md
+++ b/content/javascript/learn-markdown/detail/1.md
@@ -2,5 +2,5 @@
 title = "1"
 description = "アロー関数(arrow function)はJavaScriptの関数を作る方法のひとつです。"
 date = 1970-01-01
-tags = ["Python", "Markdown"]
+tag = ["Python", "Markdown"]
 +++
